fix long device name layout issue
Before, a long device name in the "disconect from
Sync" confirmation panel caused an overflow.
This commit fix that.

--- a/packages/fxa-settings/src/styles/tailwind.scss
+++ b/packages/fxa-settings/src/styles/tailwind.scss
@@ -49,3 +49,9 @@ body {
     @apply transition duration-150;
   }
 }
+
+@layer utilities{
+  .break-word {
+    word-break: break-word;
+  }
+}
